allow loading playlist URLs through the VLC web interface

--- a/share/lua/http/index.html
+++ b/share/lua/http/index.html
@@ -253,6 +253,12 @@
 					</div>
 				</div>
 			</div>
+
+                        <div class="yt">
+				<input id="url" type="text" style="padding: 0px">
+				<button id="ytbtn">Add</button>
+			</div>
+
 			<div class="footer">
 				VLC <?vlc print(vlc.misc.version() .. ' - Lua Web Interface - <a id="mobileintflink" href="/mobile.html">Mobile Interface</a> - ' .. vlc.misc.copyright()) ?>
 			</div>
